--- a/examples/index.html
+++ b/examples/index.html
@@ -46,7 +46,7 @@
 
 
     <script src="../node_modules/vue/dist/vue.js"></script>
-    <script src="../index.js"></script>
+    <script src="../dist/vue-image-loader.js"></script>
     <script src="./example.js"></script>
 
 </body>
